Set color of territory based on its owner

--- a/ui/src/common/constants.scss
+++ b/ui/src/common/constants.scss
@@ -1,5 +1,5 @@
-$territory-width: 6.4vw;
-$territory-height: 4vw;
+$territory-width: 5vw;
+$territory-height: 5vw;
 
 $color-background: #f0f0f0;
 
@@ -9,6 +9,7 @@ $color-player-3: #5c6bc0;
 $color-player-4: #29b6f6;
 $color-player-5: #26a69a;
 $color-player-6: #9ccc65;
+$color-unclaimed: #dddddd;
 
 $font-size-large: 20px;
 $font-size-medium: 16px;
