--- a/ui/src/components/App/stylesheet.scss
+++ b/ui/src/components/App/stylesheet.scss
@@ -8,29 +8,44 @@
   flex-direction: column;
   background-color: $color-background;
 
-  .dialog {
+  .dialogContainer {
+    z-index: 4;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 32rem;
-    height: 16rem;
-    margin-left: -16rem;
-    margin-top: -8rem;
-    background-color: white;
-    box-shadow: 0 0 8px rgba(#888888, .5);
-    padding: 1rem;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(black, .2);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: all .2s;
 
-    .question {
-      margin-bottom: 1rem;
-      text-align: center;
+    &:empty {
+      background-color: rgba(black, 0);
+      pointer-events: none;
     }
 
-    .answer {
-      margin-bottom: 1rem;
+    .dialog {
+      width: 32rem;
+      height: 16rem;
+      background-color: white;
+      box-shadow: 0 0 8px rgba(#888888, .5);
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      .question {
+        margin-bottom: 1rem;
+        text-align: center;
+      }
+
+      .answer {
+        margin-bottom: 1rem;
+      }
     }
   }
 }
