--- a/ui/src/components/App/stylesheet.scss
+++ b/ui/src/components/App/stylesheet.scss
@@ -6,7 +6,28 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  background-color: $color-background;
+  overflow: hidden;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: url(/background.jpg) no-repeat center;
+    background-size: cover;
+    filter: blur(4px);
+    margin: -8px;
+  }
+
+  .main {
+    position: relative;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba($color-background, .75);
+  }
 
   .dialogContainer {
     z-index: 4;
@@ -31,7 +52,7 @@
       width: 32rem;
       height: 16rem;
       background-color: white;
-      box-shadow: 0 0 8px rgba(#888888, .5);
+      box-shadow: 0 0 8px rgba($color-hint, .5);
       padding: 1rem;
       display: flex;
       flex-direction: column;
