--- a/ui/src/components/Lobby/stylesheet.scss
+++ b/ui/src/components/Lobby/stylesheet.scss
@@ -42,6 +42,11 @@
         margin-bottom: 0;
       }
 
+      &.disabled {
+        pointer-events: none;
+        opacity: .5;
+      }
+
       .name {
         margin-bottom: .5rem;
         font-size: $font-size-large;
@@ -75,6 +80,10 @@
             color: $color-hint;
             font-weight: normal;
           }
+        }
+
+        .playing {
+          color: $color-hint;
         }
       }
 
