--- a/ui/src/components/Territory/stylesheet.scss
+++ b/ui/src/components/Territory/stylesheet.scss
@@ -52,15 +52,12 @@
     animation: .5s glow alternate infinite;
   }
 
-  &.from,
-  &.to {
-    box-shadow: 0 0 1em 1em $color-background;
-    animation: none;
-  }
-
+  &.selected,
   &.from,
   &.to {
     transform: scale(1.2);
+    box-shadow: 0 0 1em 1em $color-background;
+    animation: none;
   }
 
   &.from {
