--- a/ui/src/components/Game/stylesheet.scss
+++ b/ui/src/components/Game/stylesheet.scss
@@ -121,24 +121,6 @@
     }
 
     .attackContainer {
-      z-index: 3;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background-color: rgba(black, .8);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      transition: all .2s;
-
-      &:empty {
-        background-color: rgba(black, 0);
-        pointer-events: none;
-      }
-
       .attack {
         display: flex;
         flex-direction: column;
@@ -247,6 +229,32 @@
             }
           }
         }
+      }
+    }
+
+    .winnerContainer {
+      font-size: 4rem;
+      color: white;
+    }
+
+    .attackContainer,
+    .winnerContainer {
+      z-index: 3;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: rgba(black, .8);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      transition: all .2s;
+
+      &:empty {
+        background-color: rgba(black, 0);
+        pointer-events: none;
       }
     }
   }
