--- a/ui/src/components/App/stylesheet.scss
+++ b/ui/src/components/App/stylesheet.scss
@@ -1,9 +1,9 @@
 @import "../../common/constants";
 
 .App {
+  position: relative;
   width: 100vw;
   height: 100vh;
-  position: relative;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -93,6 +93,17 @@
             margin-right: 0;
           }
         }
+      }
+    }
+  }
+}
+
+@media only screen and (orientation:portrait) {
+  .App {
+    .dialogContainer {
+      .dialog {
+        width: 100%;
+        height: auto;
       }
     }
   }
