--- a/ui/src/components/Lobby/stylesheet.scss
+++ b/ui/src/components/Lobby/stylesheet.scss
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 4rem;
+  padding: 4rem 0;
+  overflow-y: auto;
 
   .title {
     display: flex;
