--- a/ui/src/index.scss
+++ b/ui/src/index.scss
@@ -1,12 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Itim');
 @import "./common/constants";
 
+html {
+  font-family: 'Itim', cursive;
+  font-size: 16px;
+  color: $color-font;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Itim', cursive;
-  font-size: $font-size-medium;
-  color: $color-font;
 }
 
 * {
@@ -59,4 +62,10 @@ button {
   font-family: inherit;
   border: none;
   background: none;
+}
+
+@media only screen and (max-width: 960px) {
+  html {
+    font-size: 12px;
+  }
 }
